Update swager.yml add create specs
